[package]
name = "blockchain"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
ring = "0.16.20"
rusqlite = { version = "0.28.0", features = ["bundled"] }
serde = { version="1.0.152", features = ["derive"] }
serde_json = "1.0.93"
sha2 = "0.10.6"
